[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assetts/ogre_hammer.png" type="Texture" id=1]
[ext_resource path="res://Assetts/ogre.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Ogre.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.30038
height = 13.1827

[sub_resource type="Animation" id=2]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer Pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.5907, 51.0486, 44.8763, -42.9169, 15.5907 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer Pivot/Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "AttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer Pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 138.0, 107.6, 107.6, 214.2, 138.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer Pivot/Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.16182
height = 4.19572

[node name="Ogre" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
modulate = Color( 1, 1, 1, 1 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
offset = Vector2( 0.37, -0.923 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -0.230349, 0.0460691 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Attack = SubResource( 2 )

[node name="HPLabel" parent="." index="3"]
margin_left = -21.0768
margin_top = -19.0642
margin_right = 18.9232
margin_bottom = -5.06425

[node name="AttackAnimPlayer" type="AnimationPlayer" parent="." index="4"]
anims/AttackLeft = SubResource( 2 )
anims/AttackRight = SubResource( 4 )

[node name="Hammer Pivot" type="Node2D" parent="." index="5"]
rotation = 0.27211

[node name="Sprite" type="Sprite" parent="Hammer Pivot" index="0"]
position = Vector2( -10.1019, -1.88067 )
rotation = -1.45822
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Hammer Pivot" index="1"]
monitoring = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hammer Pivot/Area2D" index="0"]
position = Vector2( -12.6642, -2.1753 )
rotation = 0.124397
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
autostart = true

[node name="MoveTimer" type="Timer" parent="." index="7"]
wait_time = 1.5
autostart = true
[connection signal="body_entered" from="Hammer Pivot/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
